--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -386,6 +386,9 @@
     margin: 1.5rem -7.8rem;
     color: black;
   }
+  #darkThemeafterLogin {
+    color: white;
+  }
   .hemb-icon {
     color: #fff;
   }
